--- a/crates/extension_api/Cargo.toml
+++ b/crates/extension_api/Cargo.toml
@@ -7,7 +7,7 @@ description = "A Rust-based API for building WebAssembly extensions for the Klyx
 license = "GPL-3.0"
 repository = "https://github.com/klyx-dev/klyx_extension_api"
 homepage = "https://github.com/klyx-dev/klyx_extension_api"
-readme = "README.md"
+readme = "../../README.md"
 keywords = ["klyx", "extension", "webassembly", "wasm", "android"]
 categories = ["api-bindings", "wasm", "development-tools"]
 publish = true
